fixed word-wrapping issues, fixed notes position

--- a/src/styles/note-general.css
+++ b/src/styles/note-general.css
@@ -51,7 +51,9 @@ button {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
+  justify-content: center;
   margin-left: 35px;
+  margin-right: 35px;
 }
 
 .note {
@@ -59,8 +61,8 @@ button {
   -moz-box-shadow: 5px 5px 15px #666, -5px -5px 15px #666;
   box-shadow: 5px 5px 15px #666, -5px -5px 15px #666;
   height: 265px;
-  max-width: 300px;
-  margin: 10px;
+  min-width: 300px;
+  margin: 20px;
   -webkit-flex-basis: 300px;
   -moz-flex-basis: 300px;
   -ms-flex-basis: 300px;
@@ -68,8 +70,12 @@ button {
   -webkit-flex-grow: 2;
   -moz-flex-grow: 2;
   -ms-flex-grow: 2;
-  flex-grow: 2;
+  flex-grow: 0.25;
   cursor: pointer;
+}
+
+.note > p {
+  word-break: break-all;
 }
 
 .dates {
